--- a/base/plugins/iscore-plugin-automation/CMakeLists.txt
+++ b/base/plugins/iscore-plugin-automation/CMakeLists.txt
@@ -68,12 +68,15 @@ set(SRCS
 "${CMAKE_CURRENT_SOURCE_DIR}/iscore_plugin_automation.cpp"
 )
 
-add_library(${PROJECT_NAME} ${SRCS} ${HDRS} ${TINYSPLINE})
+add_library(${PROJECT_NAME} ${SRCS} ${HDRS})
 
 iscore_generate_command_list_file(${PROJECT_NAME} "${HDRS}")
 
 target_link_libraries(${PROJECT_NAME}
   PUBLIC Qt5::Core Qt5::Widgets
-            iscore_lib_base iscore_lib_device iscore_plugin_deviceexplorer iscore_lib_process iscore_lib_state iscore_plugin_curve iscore_lib_inspector)
+            iscore_lib_base iscore_lib_device
+            iscore_plugin_deviceexplorer iscore_lib_process
+            iscore_lib_state iscore_plugin_curve iscore_lib_inspector
+            tinyspline)
 
 setup_iscore_plugin(${PROJECT_NAME})
