--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,8 +28,8 @@ cmake_policy(SET CMP0063 NEW)
 set(ISCORE_VERSION_MAJOR 1)
 set(ISCORE_VERSION_MINOR 0)
 set(ISCORE_VERSION_PATCH 0)
-set(ISCORE_VERSION_EXTRA b21)
-set(ISCORE_CODENAME "i-scovfefe")
+set(ISCORE_VERSION_EXTRA b22)
+set(ISCORE_CODENAME "i-scobstruction of justice")
 set(ISCORE_VERSION "${ISCORE_VERSION_MAJOR}.${ISCORE_VERSION_MINOR}.${ISCORE_VERSION_PATCH}-${ISCORE_VERSION_EXTRA}")
 
 enable_testing()
