--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -56,7 +56,7 @@ set(OSSIA_PD OFF CACHE INTERNAL "" FORCE)
 set(OSSIA_JAVA OFF CACHE INTERNAL "" FORCE)
 set(OSSIA_OSX_FAT_LIBRARIES OFF CACHE INTERNAL "" FORCE)
 set(OSSIA_PYTHON OFF CACHE INTERNAL "" FORCE)
-set(OSSIA_DISABLE_QT_PLUGIN ON CACHE INTERNAL "" FORCE)
+set(OSSIA_DISABLE_QT_PLUGIN OFF CACHE INTERNAL "" FORCE)
 
 add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/API" )
 
