--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,10 +1,10 @@
 environment:
-  QTDIR: C:/Qt/5.8/msvc2015
-  BOOST_ROOT: c:/Libraries/boost_1_63_0
+  QTDIR: C:/Qt/5.9/msvc2017_64
+  BOOST_ROOT: c:/Libraries/boost_1_64_0
 
 configuration: Release
 
-image: Visual Studio 2015
+image: Visual Studio 2017
 platform: x64
 
 install:
@@ -15,7 +15,7 @@ build_script:
   - git submodule update --init --recursive
   - mkdir build
   - cd build
-  - cmake -G "Visual Studio 14" -DISCORE_CONFIGURATION=static-release -DBOOST_ROOT="%BOOST_ROOT%" -DCMAKE_PREFIX_PATH="%QTDIR%/lib/cmake/Qt5" -DISCORE_ENABLE_LTO=0 ..
+  - cmake -G "Visual Studio 15 2017 Win64" -DISCORE_CONFIGURATION=static-release -DBOOST_ROOT="%BOOST_ROOT%" -DCMAKE_PREFIX_PATH="%QTDIR%/lib/cmake/Qt5" -DISCORE_ENABLE_LTO=0 ..
   - msbuild PACKAGE.vcxproj /p:Configuration=Release /p:PreferredToolArchitecture=x64 /m
 
 artifacts:
