re-enable websocket, serial protocols, and enable local tree by default

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -57,6 +57,8 @@ set(OSSIA_JAVA OFF CACHE INTERNAL "" FORCE)
 set(OSSIA_OSX_FAT_LIBRARIES OFF CACHE INTERNAL "" FORCE)
 set(OSSIA_PYTHON OFF CACHE INTERNAL "" FORCE)
 set(OSSIA_DISABLE_QT_PLUGIN OFF CACHE INTERNAL "" FORCE)
+set(OSSIA_PROTOCOL_WEBSOCKETS ON)
+set(OSSIA_PROTOCOL_SERIAL ON)
 
 add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/API" )
 
