--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -56,6 +56,7 @@ set(OSSIA_PD OFF CACHE INTERNAL "" FORCE)
 set(OSSIA_JAVA OFF CACHE INTERNAL "" FORCE)
 set(OSSIA_OSX_FAT_LIBRARIES OFF CACHE INTERNAL "" FORCE)
 set(OSSIA_PYTHON OFF CACHE INTERNAL "" FORCE)
+set(OSSIA_QT ON CACHE INTERNAL "" FORCE)
 set(OSSIA_DISABLE_QT_PLUGIN OFF CACHE INTERNAL "" FORCE)
 set(OSSIA_PROTOCOL_WEBSOCKETS ON CACHE INTERNAL "" FORCE)
 set(OSSIA_PROTOCOL_SERIAL ON CACHE INTERNAL "" FORCE)
