--- a/base/plugins/iscore-plugin-media/CMakeLists.txt
+++ b/base/plugins/iscore-plugin-media/CMakeLists.txt
@@ -5,10 +5,7 @@ iscore_common_setup()
 
 # Packages
 find_package(Qt5 5.3 REQUIRED COMPONENTS Core Widgets Multimedia)
-
-if(APPLE)
-find_package(Sndfile)
-endif()
+find_package(FFmpeg REQUIRED)
 
 file(GLOB_RECURSE HDRS "${CMAKE_CURRENT_SOURCE_DIR}/3rdparty/libaudiotool/src/libwatermark/*.h")
 # Files & main target
@@ -63,20 +60,11 @@ target_link_libraries(${PROJECT_NAME} PUBLIC
                      Qt5::Core Qt5::Widgets Qt5::Multimedia
                      iscore_lib_base
 )
-
+target_link_libraries(${PROJECT_NAME} PRIVATE ${FFMPEG_LIBRARIES})
 if(NOT ANDROID)
-if(APPLE)
-target_link_libraries(${PROJECT_NAME} PUBLIC -L/usr/local/lib)
-endif()
 target_link_libraries(${PROJECT_NAME} PUBLIC
             iscore_plugin_midi
             ${SNDFILE_LIBRARIES}
             )
 endif()
-
-if(${SNDFILE_FOUND})
-    target_include_directories(${PROJECT_NAME} PRIVATE
-                               ${SNDFILE_INCLUDE_DIR})
-endif()
-
 setup_iscore_plugin(${PROJECT_NAME})
