--- a/base/plugins/iscore-plugin-media/CMakeLists.txt
+++ b/base/plugins/iscore-plugin-media/CMakeLists.txt
@@ -5,7 +5,10 @@ iscore_common_setup()
 
 # Packages
 find_package(Qt5 5.3 REQUIRED COMPONENTS Core Widgets Multimedia)
-find_package(FFmpeg REQUIRED)
+find_package(FFmpeg COMPONENTS  AVCODEC AVFORMAT AVUTIL SWRESAMPLE)
+if(NOT FFmpeg_FOUND)
+    return()
+endif()
 
 file(GLOB_RECURSE HDRS "${CMAKE_CURRENT_SOURCE_DIR}/3rdparty/libaudiotool/src/libwatermark/*.h")
 # Files & main target
