--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,5 +1,5 @@
 environment:
-  QTDIR: C:/Qt/5.9/msvc2017_64
+  QTDIR: C:/Qt/5.9.1/msvc2017_64
   BOOST_ROOT: c:/Libraries/boost_1_64_0
 
 configuration: Release
@@ -15,7 +15,7 @@ build_script:
   - git submodule update --init --recursive
   - mkdir build
   - cd build
-  - cmake -G "Visual Studio 15 2017 Win64" -DISCORE_CONFIGURATION=static-release -DBOOST_ROOT="%BOOST_ROOT%" -DCMAKE_PREFIX_PATH="%QTDIR%/lib/cmake/Qt5" -DISCORE_ENABLE_LTO=0 ..
+  - cmake -T host=x64 -G "Visual Studio 15 2017 Win64" -DISCORE_CONFIGURATION=static-release -DBOOST_ROOT="%BOOST_ROOT%" -DCMAKE_PREFIX_PATH="%QTDIR%/lib/cmake/Qt5" -DISCORE_ENABLE_LTO=0 ..
   - msbuild PACKAGE.vcxproj /p:Configuration=Release /p:PreferredToolArchitecture=x64 /m
 
 artifacts:
