--- a/CMake/Deployment/Linux/i-score.desktop.in
+++ b/CMake/Deployment/Linux/i-score.desktop.in
@@ -1,9 +1,8 @@
 [Desktop Entry]
 Type=Application
-Version=${ISCORE_VERSION}
 Name=i-score
 Comment=An interactive sequencer for the intermedia arts
 Exec=i-score
 Icon=i-score
 Terminal=false
-Categories=Sound
+Categories=AudioVideo;
