--- a/base/plugins/iscore-plugin-media/CMakeLists.txt
+++ b/base/plugins/iscore-plugin-media/CMakeLists.txt
@@ -5,6 +5,7 @@ iscore_common_setup()
 
 # Packages
 find_package(Qt5 5.3 REQUIRED COMPONENTS Core Widgets Multimedia)
+set(ENV{PKG_CONFIG_PATH} "$ENV{PKG_CONFIG_PATH}:/opt/ffmpeg/lib/pkgconfig" )
 find_package(FFmpeg COMPONENTS  AVCODEC AVFORMAT AVUTIL SWRESAMPLE)
 if(NOT FFmpeg_FOUND)
     return()
@@ -63,7 +64,40 @@ target_link_libraries(${PROJECT_NAME} PUBLIC
                      Qt5::Core Qt5::Widgets Qt5::Multimedia
                      iscore_lib_base
 )
+target_include_directories(${PROJECT_NAME} PRIVATE ${FFMPEG_INCLUDE_DIRS})
 target_link_libraries(${PROJECT_NAME} PRIVATE ${FFMPEG_LIBRARIES})
+
+if(APPLE)
+    find_library(QuartzCore_FK QuartzCore)
+    find_library(AppKit_FK AppKit)
+    find_library(OpenGL_FK OpenGL)
+    find_library(Foundation_FK Foundation)
+    find_library(AVFoundation_FK AVFoundation)
+    find_library(CoreVideo_FK CoreVideo)
+    find_library(CoreMedia_FK CoreMedia)
+    find_library(VideoDecodeAcceleration_FK VideoDecodeAcceleration)
+    find_library(CoreFoundation_FK CoreFoundation)
+    find_library(AudioToolbox_FK AudioToolbox)
+    find_library(VideoToolbox_FK VideoToolbox)
+    find_package(BZip2 REQUIRED)
+    find_package(ZLIB REQUIRED)
+
+    target_link_libraries(${PROJECT_NAME} PRIVATE
+        ${QuartzCore_FK}
+        ${AppKit_FK}
+        ${OpenGL_FK}
+        ${Foundation_FK}
+        ${AVFoundation_FK}
+        ${CoreVideo_FK}
+        ${CoreMedia_FK}
+        ${VideoDecodeAcceleration_FK}
+        ${CoreFoundation_FK}
+        ${AudioToolbox_FK}
+        ${VideoToolbox_FK}
+        BZip2::BZip2
+        ZLIB::ZLIB
+        )
+endif()
 if(NOT ANDROID)
 target_link_libraries(${PROJECT_NAME} PUBLIC
             iscore_plugin_midi
