--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,8 +28,8 @@ cmake_policy(SET CMP0063 NEW)
 set(SCORE_VERSION_MAJOR 1)
 set(SCORE_VERSION_MINOR 0)
 set(SCORE_VERSION_PATCH 0)
-set(SCORE_VERSION_EXTRA b32)
-set(SCORE_CODENAME "Deep Fried Score")
+set(SCORE_VERSION_EXTRA b33)
+set(SCORE_CODENAME "yada yada tu connais la routine")
 set(SCORE_VERSION "${SCORE_VERSION_MAJOR}.${SCORE_VERSION_MINOR}.${SCORE_VERSION_PATCH}-${SCORE_VERSION_EXTRA}")
 
 enable_testing()
