--- a/base/plugins/score-plugin-deviceexplorer/CMakeLists.txt
+++ b/base/plugins/score-plugin-deviceexplorer/CMakeLists.txt
@@ -134,12 +134,13 @@ target_link_libraries(score_plugin_deviceexplorer
                 QProgressIndicator)
 
 if(OSSIA_DNSSD)
-target_sources(${PROJECT_NAME} PRIVATE
+  target_sources(${PROJECT_NAME} PRIVATE
     "${CMAKE_CURRENT_SOURCE_DIR}/Explorer/Widgets/ZeroConf/ZeroconfBrowser.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/Explorer/Widgets/ZeroConf/ZeroconfBrowser.cpp")
-
-target_sources(${PROJECT_NAME} PRIVATE $<TARGET_OBJECTS:ServusQt>)
-target_include_directories(${PROJECT_NAME} PRIVATE ${OSSIA_3RDPARTY_FOLDER}/Servus)
+  
+  target_link_libraries(${PROJECT_NAME} PRIVATE Servus_iface)
+  target_sources(${PROJECT_NAME} PRIVATE $<TARGET_OBJECTS:ServusQt>)
+  target_include_directories(${PROJECT_NAME} PRIVATE ${OSSIA_3RDPARTY_FOLDER}/Servus)
 endif()
 target_link_libraries(${PROJECT_NAME} PRIVATE Qt5::Core)
 setup_score_plugin(score_plugin_deviceexplorer)
