--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -55,7 +55,7 @@ set(OSSIA_NO_INSTALL ON CACHE INTERNAL "" FORCE)
 set(OSSIA_PD OFF CACHE INTERNAL "" FORCE)
 set(OSSIA_JAVA OFF CACHE INTERNAL "" FORCE)
 set(OSSIA_OSX_FAT_LIBRARIES OFF CACHE INTERNAL "" FORCE)
-set(OSSIA_PYTHON ON CACHE INTERNAL "" FORCE)
+set(OSSIA_PYTHON OFF CACHE INTERNAL "" FORCE)
 set(OSSIA_QT ON CACHE INTERNAL "" FORCE)
 set(OSSIA_DISABLE_QT_PLUGIN ON CACHE INTERNAL "" FORCE)
 set(OSSIA_PROTOCOL_WEBSOCKETS ON CACHE INTERNAL "" FORCE)
