fixes, js support

--- a/base/plugins/score-plugin-js/CMakeLists.txt
+++ b/base/plugins/score-plugin-js/CMakeLists.txt
@@ -18,12 +18,17 @@ set(HDRS
   "${CMAKE_CURRENT_SOURCE_DIR}/score_plugin_js.hpp"
   "${CMAKE_CURRENT_SOURCE_DIR}/JS/Commands/EditScript.hpp"
   "${CMAKE_CURRENT_SOURCE_DIR}/JS/Commands/JSCommandFactory.hpp"
+
   "${CMAKE_CURRENT_SOURCE_DIR}/JS/Executor/Component.hpp"
   "${CMAKE_CURRENT_SOURCE_DIR}/JS/Executor/JSAPIWrapper.hpp"
   "${CMAKE_CURRENT_SOURCE_DIR}/JS/Executor/ProcessScript.hpp"
   "${CMAKE_CURRENT_SOURCE_DIR}/JS/Executor/StateComponent.hpp"
+
   "${CMAKE_CURRENT_SOURCE_DIR}/JS/Inspector/JSInspectorFactory.hpp"
   "${CMAKE_CURRENT_SOURCE_DIR}/JS/Inspector/JSInspectorWidget.hpp"
+
+  "${CMAKE_CURRENT_SOURCE_DIR}/JS/Qml/QmlObjects.hpp"
+
   "${CMAKE_CURRENT_SOURCE_DIR}/JS/JSProcessFactory.hpp"
   "${CMAKE_CURRENT_SOURCE_DIR}/JS/JSProcessMetadata.hpp"
   "${CMAKE_CURRENT_SOURCE_DIR}/JS/JSProcessModel.hpp"
@@ -42,6 +47,8 @@ set(SRCS
 "${CMAKE_CURRENT_SOURCE_DIR}/JS/Commands/JSCommandFactory.cpp"
 
 "${CMAKE_CURRENT_SOURCE_DIR}/JS/Inspector/JSInspectorWidget.cpp"
+
+"${CMAKE_CURRENT_SOURCE_DIR}/JS/Qml/QmlObjects.cpp"
 
 "${CMAKE_CURRENT_SOURCE_DIR}/score_plugin_js.cpp"
 )
