refactor;  fix problems with loops

--- a/base/plugins/score-plugin-engine/CMakeLists.txt
+++ b/base/plugins/score-plugin-engine/CMakeLists.txt
@@ -47,7 +47,9 @@ set(HDRS
     "${CMAKE_CURRENT_SOURCE_DIR}/Engine/Executor/StateComponent.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/Engine/Executor/DocumentPlugin.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/Engine/Executor/TimeSyncComponent.hpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/Engine/Executor/TimeSyncRawPtrComponent.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/Engine/Executor/IntervalComponent.hpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/Engine/Executor/IntervalRawPtrComponent.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/Engine/Executor/Interpolation/InterpolationComponent.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/Engine/Executor/Automation/Component.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/Engine/Executor/Automation/GradientComponent.hpp"
@@ -128,6 +130,8 @@ set(SRCS
 "${CMAKE_CURRENT_SOURCE_DIR}/Engine/Executor/DocumentPlugin.cpp"
 "${CMAKE_CURRENT_SOURCE_DIR}/Engine/Executor/TimeSyncComponent.cpp"
 "${CMAKE_CURRENT_SOURCE_DIR}/Engine/Executor/IntervalComponent.cpp"
+"${CMAKE_CURRENT_SOURCE_DIR}/Engine/Executor/TimeSyncRawPtrComponent.cpp"
+"${CMAKE_CURRENT_SOURCE_DIR}/Engine/Executor/IntervalRawPtrComponent.cpp"
 "${CMAKE_CURRENT_SOURCE_DIR}/Engine/Executor/Interpolation/InterpolationComponent.cpp"
 "${CMAKE_CURRENT_SOURCE_DIR}/Engine/Executor/Automation/Component.cpp"
 "${CMAKE_CURRENT_SOURCE_DIR}/Engine/Executor/Automation/GradientComponent.cpp"
